--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>su.svn</groupId>
     <artifactId>ServiceItDesk</artifactId>
-    <version>1.0-4</version>
+    <version>1.0-5</version>
     <packaging>war</packaging>
 
     <name>JavaEE-09-2018 Service It Desk Webapp</name>
@@ -28,7 +28,7 @@
         <jaxen.version>1.1.6</jaxen.version>
         <junit.version>4.11</junit.version>
         <log4j.version>2.10.0</log4j.version>
-        <lombok.version>1.18.2</lombok.version>
+        <lombok.version>1.18.4</lombok.version>
         <oracle.driver.version>11.2.0.4</oracle.driver.version>
         <org.assertj.assertj-core.version>3.11.1</org.assertj.assertj-core.version>
         <org.jmockit.version>1.24</org.jmockit.version>
@@ -209,6 +209,14 @@
             <groupId>org.jmockit</groupId>
             <artifactId>jmockit</artifactId>
             <version>${org.jmockit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${org.assertj.assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
 
