--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>su.svn</groupId>
     <artifactId>ServiceItDesk</artifactId>
-    <version>1.0-7</version>
+    <version>1.0-8</version>
     <packaging>war</packaging>
 
     <name>JavaEE-09-2018 Service It Desk Webapp</name>
@@ -27,7 +27,7 @@
         <javax.jsonb.version>1.0</javax.jsonb.version>
         <jaxen.version>1.1.6</jaxen.version>
         <junit.version>4.11</junit.version>
-        <log4j.version>2.10.0</log4j.version>
+        <log4j.version>2.11.1</log4j.version>
         <lombok.version>1.18.4</lombok.version>
         <oracle.driver.version>11.2.0.4</oracle.driver.version>
         <org.assertj.assertj-core.version>3.11.1</org.assertj.assertj-core.version>
@@ -37,7 +37,7 @@
         <org.junit.platform.version>1.3.1</org.junit.platform.version>
         <org.mockito.version>2.23.4</org.mockito.version>
         <postgresql.driver.version>42.2.2</postgresql.driver.version>
-        <slf4j.version>1.7.21</slf4j.version>
+        <slf4j.version>1.7.25</slf4j.version>
 
         <mavencompiler.version>3.7.0</mavencompiler.version>
         <mavenbuilder.version>3.2.0</mavenbuilder.version>
@@ -159,16 +159,34 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <!--
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        -->
 
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+
+        <!--
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>test</scope>
+        </dependency>
+        -->
 
         <!-- test -->
         <dependency>
