--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <groupId>su.svn</groupId>
     <artifactId>ServiceItDesk</artifactId>
-    <version>1.1-19</version>
+    <version>1.1-21</version>
     <packaging>war</packaging>
 
     <name>JavaEE-09-2018 Service It Desk Webapp</name>
@@ -47,6 +47,7 @@
         <org.mockito.version>2.23.4</org.mockito.version>
         <postgresql.driver.version>42.2.2</postgresql.driver.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <weld-junit.version>1.3.1.Final</weld-junit.version>
 
         <mavencompiler.version>3.7.0</mavencompiler.version>
         <mavenbuilder.version>3.2.0</mavenbuilder.version>
@@ -256,6 +257,12 @@
             <artifactId>junit-platform-launcher</artifactId>
             <version>${org.junit.platform.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-junit5</artifactId>
+            <version>${weld-junit.version}</version>
         </dependency>
 
         <dependency>
