--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 
 <!--
   ~ pom.xml
-  ~ This file was last modified at 2019-02-03 17:27 by Victor N. Skurikhin.
+  ~ This file was last modified at 2019-02-03 18:07 by Victor N. Skurikhin.
   ~ $Id$
   ~ This is free and unencumbered software released into the public domain.
   ~ For more information, please refer to <http://unlicense.org>
@@ -17,7 +17,7 @@
 
     <groupId>su.svn</groupId>
     <artifactId>ServiceItDesk</artifactId>
-    <version>1.2-26</version>
+    <version>1.2-27</version>
     <packaging>war</packaging>
 
     <name>JavaEE-09-2018 Service It Desk Webapp</name>
@@ -35,6 +35,7 @@
         <javax.jsonb.version>1.0</javax.jsonb.version>
         <jaxen.version>1.1.6</jaxen.version>
         <jersey.version>2.27</jersey.version>
+        <jstl.version>1.2.1</jstl.version>
         <junit.version>4.11</junit.version>
         <log4j.version>2.11.1</log4j.version>
         <lombok.version>1.18.4</lombok.version>
@@ -192,6 +193,25 @@
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>${jersey.version}</version>
+        </dependency>
+
+        <!-- JSTL -->
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.servlet.jsp.jstl</artifactId>
+            <version>${jstl.version}</version>
+            <exclusions>
+                <!-- jstl-api was adding selvlet-api 2.5 and jsp-api-->
+                <exclusion>
+                    <artifactId>jstl-api</artifactId>
+                    <groupId>javax.servlet.jsp.jstl</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- logging -->
