--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,53 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     -->
+
+    <!-- SECURITY -->
+    <security-role>
+        <description>Administrators of the system</description>
+        <role-name>ADMIN</role-name>
+    </security-role>
+    <security-role>
+        <description>Managers of the system</description>
+        <role-name>COORDICATOR</role-name>
+    </security-role>
+    <security-role>
+        <description>Actuaries of the system</description>
+        <role-name>ACTUARY</role-name>
+    </security-role>
+    <security-role>
+        <description>Users of the system</description>
+        <role-name>USER</role-name>
+    </security-role>
+
+    <security-role>
+        <role-name>*</role-name>
+    </security-role>
+
+    <security-constraint>
+        <display-name>Restricted To Administrators</display-name>
+        <web-resource-collection>
+            <web-resource-name>Restricted Access</web-resource-name>
+            <url-pattern>/admins.jsp</url-pattern>
+            <url-pattern>/admins/*</url-pattern>
+            <url-pattern>/js/admins/*</url-pattern>
+        </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>ADMIN</role-name>
+        </auth-constraint>
+
+        <user-data-constraint>
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>jdbc-realm</realm-name>
+        <form-login-config>
+            <form-login-page>/WEB-INF/login.jsp</form-login-page>
+            <form-error-page>/WEB-INF/loginError.html</form-error-page>
+        </form-login-config>
+    </login-config>
 </web-app>
