--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ web.xml
+  ~ This file was last modified at 2019-02-11 23:42 by Victor N. Skurikhin.
+  ~ $Id$
+  ~ This is free and unencumbered software released into the public domain.
+  ~ For more information, please refer to <http://unlicense.org>
+  -->
+
 <web-app version="3.1"
          xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -22,16 +30,20 @@
 
     <!-- SECURITY -->
     <security-role>
+        <description>Actuaries of the system</description>
+        <role-name>ACTUARY</role-name>
+    </security-role>
+    <security-role>
         <description>Administrators of the system</description>
         <role-name>ADMIN</role-name>
     </security-role>
     <security-role>
         <description>Managers of the system</description>
-        <role-name>COORDICATOR</role-name>
+        <role-name>COORDINATOR</role-name>
     </security-role>
     <security-role>
-        <description>Actuaries of the system</description>
-        <role-name>ACTUARY</role-name>
+        <description>Supervisor of the system</description>
+        <role-name>SUPER</role-name>
     </security-role>
     <security-role>
         <description>Users of the system</description>
@@ -43,16 +55,103 @@
     </security-role>
 
     <security-constraint>
+        <display-name>Restricted To Actuaries</display-name>
+        <web-resource-collection>
+            <web-resource-name>Restricted Access</web-resource-name>
+            <url-pattern>/actuaries/*</url-pattern>
+            <url-pattern>/js/actuaries/*</url-pattern>
+        </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>ACTUARY</role-name>
+        </auth-constraint>
+
+        <user-data-constraint>
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+
+    <security-constraint>
         <display-name>Restricted To Administrators</display-name>
         <web-resource-collection>
             <web-resource-name>Restricted Access</web-resource-name>
-            <url-pattern>/admins.jsp</url-pattern>
             <url-pattern>/admins/*</url-pattern>
             <url-pattern>/js/admins/*</url-pattern>
         </web-resource-collection>
 
         <auth-constraint>
             <role-name>ADMIN</role-name>
+        </auth-constraint>
+
+        <user-data-constraint>
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <display-name>Restricted To Coordinators</display-name>
+        <web-resource-collection>
+            <web-resource-name>Restricted Access</web-resource-name>
+            <url-pattern>/coordinators/*</url-pattern>
+            <url-pattern>/js/coordinators/*</url-pattern>
+        </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>COORDINATOR</role-name>
+        </auth-constraint>
+
+        <user-data-constraint>
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <display-name>Restricted To Administrators and Coordinators</display-name>
+        <web-resource-collection>
+            <web-resource-name>Restricted Access</web-resource-name>
+            <url-pattern>/cmdb/*</url-pattern>
+            <url-pattern>/js/cmdb/*</url-pattern>
+        </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>ADMIN</role-name>
+            <role-name>COORDINATOR</role-name>
+        </auth-constraint>
+
+        <user-data-constraint>
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <display-name>Restricted To Supervisor</display-name>
+        <web-resource-collection>
+            <web-resource-name>Restricted Access</web-resource-name>
+            <url-pattern>/cmdbs/*</url-pattern>
+            <url-pattern>/js/cmdbs/*</url-pattern>
+        </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>SUPER</role-name>
+        </auth-constraint>
+
+        <user-data-constraint>
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <display-name>Restricted To Users</display-name>
+        <web-resource-collection>
+            <web-resource-name>Restricted Access</web-resource-name>
+            <url-pattern>/welcome.jsp</url-pattern>
+        </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>ACTUARY</role-name>
+            <role-name>ADMIN</role-name>
+            <role-name>COORDINATOR</role-name>
+            <role-name>USER</role-name>
         </auth-constraint>
 
         <user-data-constraint>
