--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 
 <!--
   ~ pom.xml
-  ~ This file was last modified at 2019-02-12 00:02 by Victor N. Skurikhin.
+  ~ This file was last modified at 2019-02-14 22:35 by Victor N. Skurikhin.
   ~ $Id$
   ~ This is free and unencumbered software released into the public domain.
   ~ For more information, please refer to <http://unlicense.org>
@@ -17,7 +17,7 @@
 
     <groupId>su.svn</groupId>
     <artifactId>ServiceItDesk</artifactId>
-    <version>1.3-40.2</version>
+    <version>1.3-40.3</version>
     <packaging>war</packaging>
 
     <name>JavaEE-09-2018 Service It Desk Webapp</name>
@@ -29,7 +29,7 @@
         <h2.version>1.4.197</h2.version>
         <hibernate.version>5.3.6.Final</hibernate.version>
         <httpclient.version>4.5.6</httpclient.version>
-        <jackson.version>2.8.2</jackson.version>
+        <jackson.version>2.8.11</jackson.version>
         <javaee.version>8.0</javaee.version>
         <javax.json.version>1.1</javax.json.version>
         <javax.jsonb.version>1.0</javax.jsonb.version>
@@ -48,6 +48,7 @@
         <org.mockito.version>2.23.4</org.mockito.version>
         <postgresql.driver.version>42.2.2</postgresql.driver.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <swagger.version>1.5.21</swagger.version>
         <weld-junit.version>1.3.1.Final</weld-junit.version>
 
         <mavencompiler.version>3.7.0</mavencompiler.version>
@@ -193,6 +194,12 @@
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>${jersey.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-jersey2-jaxrs</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
 
         <!-- JSTL -->
