--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -162,6 +162,7 @@
         <display-name>Restricted To Users</display-name>
         <web-resource-collection>
             <web-resource-name>Restricted Access</web-resource-name>
+            <url-pattern>/welcome.do</url-pattern>
             <url-pattern>/welcome.jsp</url-pattern>
         </web-resource-collection>
 
