--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <groupId>su.svn</groupId>
     <artifactId>ServiceItDesk</artifactId>
-    <version>1.3-40.7</version>
+    <version>1.3-40.8</version>
     <packaging>war</packaging>
 
     <name>JavaEE-09-2018 Service It Desk Webapp</name>
@@ -39,6 +39,7 @@
         <junit.version>4.11</junit.version>
         <log4j.version>2.11.1</log4j.version>
         <lombok.version>1.18.4</lombok.version>
+        <mysql.version>5.1.47</mysql.version>
         <oracle.driver.version>11.2.0.4</oracle.driver.version>
         <org.assertj.assertj-core.version>3.11.1</org.assertj.assertj-core.version>
         <org.jmockit.version>1.24</org.jmockit.version>
@@ -78,6 +79,12 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.driver.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
         </dependency>
 
         <dependency>
